Added the storage of session ID to a client-side cookie

--- a/addulator/index.html
+++ b/addulator/index.html
@@ -2,11 +2,12 @@
 <head>
 <title>Addulator</title>
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js'></script>
+<script type='text/javascript' src='../js/jquery.cookie.js'></script>
 <script type='text/javascript' src='../js/expanz.js' ></script>
 
 <script type='text/javascript'>
 
-	function callback( string ){ #('.result').append( string ); }
+	function callback( str ){ $('.result').append( str ); }
 
 
 	$(document).ready( function() {
