fix of bugs around session and activity handle

--- a/addulator/activity.samples.calc.html
+++ b/addulator/activity.samples.calc.html
@@ -37,6 +37,10 @@
 		var request = CreateActivityRequest( $('form').attr('id') );
 		SendRequest( request ); 
 
+		window.onbeforeunload = function () {
+			endSession();
+		};
+
 	});
 
 
