updated method bind, removing text bind

--- a/addulator/activity.samples.calc.html
+++ b/addulator/activity.samples.calc.html
@@ -55,7 +55,7 @@
 	</div>
 
 	<div class='submit'>
-		<button id='submit' method-name='add' data-bind='click: callMethod, text: Result.label()' ></button>
+		<button id='submit' method-name='add' data-bind='click: callMethod' >add</button>
 	</div>
 
 </div>
