--- a/addulator/activity.samples.calc.html
+++ b/addulator/activity.samples.calc.html
@@ -37,25 +37,16 @@
 </head>
 <body>
 
-<div id='Activity' value='ESA.Sales.Calc' >
+<div id='container' class='Activity' value='ESA.Sales.Calc' >
 
 	<div class='textinput'>
-		<span data-bind='text: Op1.label()'></span>
+		<span class='label' data-bind='text: Op1.label()'></span>
 		<input type='text' data-bind='value: Op1.value' />
 	</div>
 
 	<div class='textinput'>
-		<span data-bind='text: Op2.label()'></span>
+		<span class='label' data-bind='text: Op2.label()'></span>
 		<input type='text' data-bind='value: Op2.value' />
-	</div>
-
-	<div class='results'>
-		<span data-bind='text: Result.label()'></span>
-		<div id='Result' data-bind='text: Result.value'></div>
-	</div>
-
-	<div class='error'>
-		<div id='error'></div>
 	</div>
 
 	<div class='submit'>
@@ -66,6 +57,15 @@
 			onError='error'>
 			add
 		</button>
+	</div>
+
+	<div class='results'>
+		<span class='label' data-bind='text: Result.label()'></span>
+		<input type='text' data-bind='value: Result.value' disabled='true' />
+	</div>
+
+	<div class='error'>
+		<div id='error'></div>
 	</div>
 
 </div>
