improved handling of errors

--- a/addulator/activity.samples.calc.html
+++ b/addulator/activity.samples.calc.html
@@ -11,11 +11,8 @@
 <script type='text/javascript'>
 
 	function success( result ) {
-
-		
 	}
 	function error( str ) {
-		console.log( str );
 	}
 
 
@@ -39,8 +36,14 @@
 
 <div id='container' class='Activity' value='ESA.Sales.Calc' >
 
+	<div class='errorContainer'>
+		<span class='error' data-bind='text: Op1.error()'></span>
+		<span class='error' data-bind='text: Op2.error()'></span>
+		<span class='error' data-bind='text: Result.error()'></span>
+	</div>
+
 	<div class='textinput'>
-		<span class='label' data-bind='text: Op1.label()'></span>
+		<div class='label' data-bind='text: Op1.label()'></div>
 		<input type='text' data-bind='value: Op1.value' />
 	</div>
 
@@ -62,10 +65,6 @@
 	<div class='results'>
 		<span class='label' data-bind='text: Result.label()'></span>
 		<input type='text' data-bind='value: Result.value' disabled='true' />
-	</div>
-
-	<div class='error'>
-		<div id='error'></div>
 	</div>
 
 </div>
