--- a/addulator/index.html
+++ b/addulator/index.html
@@ -5,7 +5,7 @@
 <link href="css/common.css?1308766139" media="screen" rel="stylesheet" type="text/css" />
 
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js'></script>
-<script type='text/javascript' src='http://knockoutjs.com/js/knockout-1.2.1.js' ></script>
+<script type='text/javascript' src='../js/knockout-1.2.1.js' ></script>
 <script type='text/javascript' src='../js/jquery.cookie.js'></script>
 <script type='text/javascript' src='../js/expanz.login.js' ></script>
 
