--- a/addulator/index.html
+++ b/addulator/index.html
@@ -6,7 +6,7 @@
 
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js'></script>
 <script type='text/javascript' src='../js/knockout-1.2.1.js' ></script>
-<script type='text/javascript' src='../js/jquery.cookie.js'></script>
+<script type='text/javascript' src='../js/jquery.cookies.2.2.0.js'></script>
 <script type='text/javascript' src='../js/expanz.login.js' ></script>
 
 
