--- a/addulator/activity.samples.calc.html
+++ b/addulator/activity.samples.calc.html
@@ -11,7 +11,9 @@
 <script type='text/javascript'>
 
 	function success( result ) {}
-	function error( errorString ) {}
+	function error( errorString ) {
+      console.log( 'error fn: ' + errorString );
+   }
    function logout() {
       redirect( './' );
    }
@@ -25,7 +27,7 @@
    <button data-bind='click: Logout' onSuccess='logout' onError='logout'>logout</button>
 </div>
 
-<div id='container' class='Activity' value='ESA.Sales.Calc' >
+<div id='container' class='Activity' name='ESA.Sales.Calc' >
 
 	<div class='errorContainer'>
 		<span class='error' data-bind='text: Op1.error'></span>
@@ -45,7 +47,7 @@
 
 	<div class='submit'>
 		<button	id='submit'
-			method-name='add'
+			method-name='Add'
 			data-bind='click: Method'
 			onSuccess='success'
 			onError='error'>
