--- a/addulator/activity.sales.calc.html
+++ b/addulator/activity.sales.calc.html
@@ -14,17 +14,17 @@
 	function error( errorString ) {
       console.log( 'error fn: ' + errorString );
    }
-   function logout() {
-      redirect( './' );
-   }
 
 </script>
 
 </head>
 <body>
 
-<div class='logout'>
-   <button data-bind='click: Logout' onSuccess='logout' onError='logout'>logout</button>
+<div class='menu'>
+   
+   <ul></ul>
+
+   <div class='logout'></div>
 </div>
 
 <div id='container' class='Activity' name='ESA.Sales.Calc' >
