addulator to calculator

--- a/calculator/activity.sales.calc.html
+++ b/calculator/activity.sales.calc.html
@@ -19,7 +19,7 @@
 
       $('#menu .menuitem').click(
          function(){
-            $(this).find('ul').toggle( 'slow' );
+            $(this).find('ul').toggle( );
          });
       $('#menu .menuitem ul').hide();
 
